--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ CrYBaBy/Packages/packages-lock.json
 CrYBaBy/Temp/UnityLockfile
 CrYBaBy/Temp/workerlic
 CrYBaBy/UserSettings/EditorUserSettings.asset
+CrYBaBy/Logs/AssetImportWorker0.log
+CrYBaBy/Logs/shadercompiler-AssetImportWorker0.log
