PlayerMovement script added

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ CrYBaBy/Temp/workerlic
 CrYBaBy/UserSettings/EditorUserSettings.asset
 CrYBaBy/Logs/AssetImportWorker0.log
 CrYBaBy/Logs/shadercompiler-AssetImportWorker0.log
+CrYBaBy/Temp/
+CrYBaBy/obj/Debug/
