--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ CrYBaBy/Temp/workerlic
 CrYBaBy/UserSettings/EditorUserSettings.asset
 CrYBaBy/Logs/AssetImportWorker0.log
 CrYBaBy/Logs/shadercompiler-AssetImportWorker0.log
+CrYBaBy/Logs/AssetImportWorker1.log
+CrYBaBy/Logs/shadercompiler-UnityShaderCompiler.exe1.log
+CrYBaBy/Logs/shadercompiler-UnityShaderCompiler.exe2.log
