Ignore Logs in GitIgnore

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ CrYBaBy/Logs/AssetImportWorker0.log
 CrYBaBy/Logs/shadercompiler-AssetImportWorker0.log
 CrYBaBy/Temp/
 CrYBaBy/obj/Debug/
+CrYBaBy/Logs/
