--- a/CrYBaBy/Assembly-CSharp.csproj
+++ b/CrYBaBy/Assembly-CSharp.csproj
@@ -56,13 +56,15 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Player\AnimationManager\AnimationManager.cs" />
     <Compile Include="Assets\Scripts\SpriteAnimator\SpriteAnimation.cs" />
     <Compile Include="Assets\Scripts\SpriteAnimator\PassiveSpriteAnimator.cs" />
     <Compile Include="Assets\Scripts\SpriteAnimator\ImageSpriteAnimator.cs" />
     <Compile Include="Assets\Scripts\Player\Movement\Movement.cs" />
     <Compile Include="Assets\Scripts\Player\Combat\Shoot.cs" />
     <Compile Include="Assets\Scripts\SpriteAnimator\SpriteAnimator.cs" />
-    <Compile Include="Assets\Scripts\Player\AnimationManager\AnimationManager.cs" />
+    <Compile Include="Assets\Scripts\Player\VisualEffect\DashAfterEffect.cs" />
+    <Compile Include="Assets\Scripts\Player\VisualEffect\PlayerAfterImagePool.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
